# notipy

./: .coveragerc  .envrc  .gitignore  .pylintrc  LICENSE  Makefile  README.md  config-dist.yaml  example-config.yaml  noti.py  pyproject.toml  requirements.txt  test
docs/source/: conf.py  installation.rst  intro.rst
images/: license.txt
noti_py/: noti.py
noti_py/config/: config.py
tests/: test_config.py  test_noti.py
