[tool.poetry]
name = "noti.py"
version = "0.0.6"
description = "Python-based notification script to post a message to a materix server via the Matrix client/server API"
authors = ["Alex Kelly <kellya@arachnitech.com>"]
license = "MIT"
#packages = [
#    { include = "noti_py/*.py" }
#]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
notipy = 'noti_py.noti:main'
